fixed alignment of faq div

--- a/Zbang.Cloudents.Mvc4WebRole/Content/StaticRtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/StaticRtl.css
@@ -61,8 +61,7 @@
 /*#endregion */
 /*#region faq */
 .faq aside {
-  margin: 6px 15px 0 0;
-  /* diff rtl*/
+  margin: 55px 15px 0 0;
   padding: 17px 69px 0 8px;
   /*rtl*/
 }
